# CherryRecorder-Server

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CherryRecorder-Server.cpp  CherryRecorder-Server.h  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  LICENSE.txt  README.md  arm64-linux-ecs.cmake  debug-ecs-ssl.sh  docker_manager.py  local_build_and_run.bat  run_t2_micro.sh  test_ssl_cert.sh  vcpkg.json  x64-linux-ecs.cmake
.github/: task-definition-simple.json  task-definition.json.template
.github/workflows/: ci.yml  main-ci-cd.yml  reusable-build-test.yml  reusable-connection-check.yml  reusable-deploy-aws.yml  reusable-docker-build.yml  reusable-docker-push-dh.yml  reusable-docker-push-ecr.yml  reusable-docs-build.yml
docs/: AWS_NLB_SSL_SETUP.md  CLEANUP_LOG.md  Doxyfile  GITHUB_VARIABLES_SSL_GUIDE.md  MULTI_ARCH_BUILD_GUIDE.md  NLB_PORT_SEPARATION_GUIDE.md  PROXYGEN_MIGRATION.md  alb-acm-setup.md  alb-troubleshooting.md  alb-websocket-setup.md  aws-alb-best-practices.md  cleanup-docs.sh  ecs-alb-troubleshooting.md  ecs-network-troubleshooting.md  github-variables-guide.md  letsencrypt-setup.md  nlb-ecs-security-group.md  nlb-vs-alb-websocket.md
docs/docs_output/html/: _cherry_recorder-_server_8cpp.html  _cherry_recorder-_server_8cpp.js  _cherry_recorder-_server_8hpp.html  _cherry_recorder-_server_8hpp.js  _cherry_recorder-_server_8hpp_source.html  annotated.html  annotated_dup.js  class_echo_server-members.html  class_echo_server.html  class_echo_server.js  class_session-members.html  class_session.html  class_session.js  classes.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  test.html  test__echo__server_8cpp.html  test__echo__server_8cpp.js  test__main_8cpp.html
docs/docs_output/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  pages_2.js  searchdata.js
history/global/: history.txt
include/: ChatListener.hpp  ChatRoom.hpp  ChatServer.hpp  ChatSession.hpp  CherryRecorder-Server.hpp  HttpServer.hpp  HttpsServer.hpp  MessageHistory.hpp  ProxygenHttpServer.hpp  SessionInterface.hpp  WebSocketListener.hpp  WebSocketSSLSession.hpp  WebSocketSession.hpp
include/handlers/: PlacesApiHandler.hpp
scripts/: check-ecs-network.sh
src/: CMakeLists.txt  ChatListener.cpp  ChatRoom.cpp  ChatServer.cpp  ChatSession.cpp  CherryRecorder-Server.cpp  HttpServer.cpp  HttpsServer.cpp  MessageHistory.cpp  ProxygenHttpServer.cpp  WebSocketListener.cpp  WebSocketSSLSession.cpp  WebSocketSession.cpp  main.cpp  main_proxygen.cpp
src/handlers/: PlacesApiHandler.cpp
ssl/: generate_test_cert.bat
tests/: test_chat_server.cpp  test_echo_server.cpp  test_http_server.cpp  test_main.cpp
